# file-microservice

./: Cargo.toml  learning-requirements.md  readme.md
docs/: api-testing.md
src/: lib.rs  main.rs
src/config/: app_config.rs
src/error/: app_error.rs  mod.rs
src/handlers/: health.rs  mod.rs  upload.rs
src/middleware/: mod.rs  rate_limit.rs
src/models/: file.rs  mod.rs
tests/: api_health.rs  file_upload.rs
