[package]
name = "file_microservice"
version = "0.1.0"
edition = "2021"

[dependencies]
http-body-util = "0.1"
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.8.1", features = ["multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }  # Add this

once_cell = "1.18"
tower = { version = "0.5.2", features = ["limit"] }
tower-http = { version = "0.6.2", features = ["trace", "cors", "auth", "limit"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9.3.0"
redis = { version = "0.28.2", features = ["tokio-comp"] }
uuid = { version = "1.0", features = ["v4"] }
validator = { version = "0.20", features = ["derive"] }


[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
hyper = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
